# cuda-renderer

./: .gitignore  CMakeLists.txt  CudaRaytracer.vcxproj  README.md  cuda-renderer.vcxproj  cuda-renderer.vcxproj.filters
src/: BVHTree.hpp  Camera.cu  Camera.h  Material.hpp  MeshInstance.hpp  MeshPrimitive.cpp  MeshPrimitive.h  OBJLoader.hpp  Ray.hpp  Scene.cpp  Scene.h  TrianglePrimitive.hpp  main.cpp  raycast.cu  raycast.h  transforms.hpp  utils.hpp
